--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
   },
